--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -36,8 +36,6 @@
   --section-gap: 160px;
 }
 
-
-
 *,
 *::before,
 *::after {
@@ -47,29 +45,17 @@
 }
 
 body {
-
   min-height: 100vh;
   color: #f2f2f2;
-  
-  background-image: url('../assets/img/background.webp');
+  display: flex;
+  justify-content: center;
+  background-image: url("../assets/img/background.webp");
   background-repeat: no-repeat;
   background-size: cover;
-  transition:
-    color 0.5s,
-    background-color 0.5s;
+  transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
