--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,13 @@
 @import './base.css';
 
 #app {
-margin: 0 auto;
+max-width: 1280px;
+display: grid;
+place-items: center;
 height: 100vh;
-max-width: 1080px;
-display: flex;
-justify-content: center;
-align-items: center;
+width: 100%;
+
+
 }
 
 input:focus, textarea:focus {
